--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<header>
 			<h1>Beetroot (Beta vulgaris)</h1>
 				<caption>A bundle of organic beets from a local farm food co-op program.</caption>
-			55 to 65 days are needed from germination to harvest of the root.
+					<p>55 to 65 days are needed from germination to harvest of the root.</p>
 			The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a
 			cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 			shredded, either alone or combined with any salad vegetable.
