--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 	<body>
 		<header>
 			<h1>Beetroot (Beta vulgaris)</h1>
-				<caption>A bundle of organic beets from a local farm food co-op program.</caption>
-					<p>55 to 65 days are needed from germination to harvest of the root.</p>
-					<p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+				<figure>
+					<img src="images/content.jpg" alt="beets">
+					<figurecaption>A bundle of organic beets from a local farm food co-op program.</figurecaption>
+				</figure>
+				<p>55 to 65 days are needed from germination to harvest of the root.</p>
+				<p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-					<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-					— Jim Halpert</blockquote>
+				<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
+				— Jim Halpert</blockquote>
 
-					<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-					— Jim Halpert</blockquote>
+				<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
+				— Jim Halpert</blockquote>
 
-					<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
-					— Chris Pratt</blockquote>
+				<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
+				— Chris Pratt</blockquote>
 
 			Common varieties
 			Albino
