added more quotes footer

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 			<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
 				<footer><cite>— Jim Halpert</cite></footer>
 			</blockquote>
-			
-			<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-			— Jim Halpert</blockquote>
 
-			<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
-			— Chris Pratt</blockquote>
+			<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
+				<footer><cite>— Jim Halpert</cite></footer>
+			</blockquote>
+
+			<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will 	clean them out of their beets. <footer><cite>— Chris Pratt</cite></footer>
+			</blockquote>
 
 			Common varieties
 			Albino
