delete one copy of a block quote

--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 				<footer><cite>— Jim Halpert</cite></footer>
 			</blockquote>
 
-			<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-				<footer><cite>— Jim Halpert</cite></footer>
-			</blockquote>
-
-			<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will 	clean them out of their beets. <footer><cite>— Chris Pratt</cite></footer>
+			<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will 	clean them out of their beets. 
+				<footer><cite>— Chris Pratt</cite></footer>
 			</blockquote>
 
 			Common varieties
