--- a/index.html
+++ b/index.html
@@ -16,27 +16,28 @@
 			<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will 	clean them out of their beets. 
 				<footer><cite>— Chris Pratt</cite></footer>
 			</blockquote>
+			<aside>	
+				<h2>Common varieties</h2>
+					Albino
+					Bull’s Blood
+					Chioggia
+					Detroit Dark Red
+					Early Wonder
+            	
+				<h2>Nutritional information</h2>
+					Serving size: 100 g
+					Energy: 180 kJ
+					Carbohydrates: 9.96 g
+					Fat: 0.18 g
+					Protein: 1.68 g
 
-			Common varieties
-			Albino
-			Bull’s Blood
-			Chioggia
-			Detroit Dark Red
-			Early Wonder
-
-			Nutritional information
-			Serving size: 100 g
-			Energy: 180 kJ
-			Carbohydrates: 9.96 g
-			Fat: 0.18 g
-			Protein: 1.68 g
-
-			Tags
-			Crimson
-			Awesome
-			Pickle-able
-			Vegetable!
-			Delicious
+				<h2>Tags</h2>
+					Crimson
+					Awesome
+					Pickle-able
+					Vegetable!
+					Delicious
+			</aside>
 
 			Source: Wikipedia; Last modified: Aug 30, 2014
 		</header>
