added a <li> and <ul>

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 			</blockquote>
 			<aside>	
 				<h2>Common varieties</h2>
-					Albino
-					Bull’s Blood
-					Chioggia
-					Detroit Dark Red
-					Early Wonder
+					<li>
+						<ul>
+							Albino
+							Bull’s Blood
+							Chioggia
+							Detroit Dark Red
+							Early Wonder
+						</ul>
+					</li>
             	
 				<h2>Nutritional information</h2>
 					Serving size: 100 g
@@ -39,7 +43,7 @@
 					Delicious
 			</aside>
 
-			Source: Wikipedia; Last modified: Aug 30, 2014
+			<footer>Source: Wikipedia; Last modified: Aug 30, 2014</footer>
 		</header>
 	</body>
 </html>
