added a <dt> and <dd>

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 					</li>
             	
 				<h2>Nutritional information</h2>
-					Serving size: 100 g
+				<br>
+					<dl>
+						<dt>Serving size:</dt> 
+							<dd> 
+								<data>100 g</data>
+							</dd>
 					Energy: 180 kJ
 					Carbohydrates: 9.96 g
 					Fat: 0.18 g
