added more <dl> and <dd> and <data>

--- a/index.html
+++ b/index.html
@@ -36,12 +36,25 @@
 							<dd> 
 								<data>100 g</data>
 							</dd>
-					</dl>
+						<dt>Energy:</dt>
+							<dd>
+								 <data>180 kJ</data>
+							</dd>
 					
-					Energy: 180 kJ
-					Carbohydrates: 9.96 g
-					Fat: 0.18 g
-					Protein: 1.68 g
+						<dt>Carbohydrates:</dt>
+							<dd> 
+								<data>9.96 g</data>
+							</dd>
+						<dt>Fat:</dt>
+							<dd>
+								<data>0.18 g</data>
+							</dd>
+						<dt>Protein:</dt>
+							<dd>
+								<data>1.68 g</data>
+							</dd>
+					</dl>
+				
 
 				<h2>Tags</h2>
 					Crimson
