fix footer and cite

--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
 							</ul>
 				        </li>
 			</aside>
-
-			<footer>Source: Wikipedia; Last modified: Aug 30, 2014</footer>
+				<footer>
+					<cite>
+						Source: Wikipedia; Last modified: <time>Aug 30, 2014</time>
+					</cite>
+				</footer>
 		</header>
 	</body>
 </html>
