--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
 	<body>
 		<header>
-			<h1>Beetroot (Beta vulgaris)</h1>
+			<h1>Beetroot <em>(Beta vulgaris)</em></h1>
 			<figure>
 				<img src="images/content.jpg" alt="beets">
 				<figurecaption>A bundle of organic beets from a local farm food co-op program.</figurecaption>
 			</figure>
 			<p>55 to 65 days are needed from germination to harvest of the root.</p>
-			<p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+			<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
 			<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
 				<footer><cite>— Jim Halpert</cite></footer>
 			</blockquote>
 
-			<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will 	clean them out of their beets. 
+			<blockquote>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will 	clean them out of their beets. 
 				<footer><cite>— Chris Pratt</cite></footer>
 			</blockquote>
 			<aside>	
