--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html
+<html>
+<head>
+<link href="css/general.css" rel="stylsheet">
 <title>Beetroot</title>
+</head>
 	<body>
 		<header>
 			<h1>Beetroot <em>(Beta vulgaris)</em></h1>
