--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link href="css/general.css" rel="stylsheet">
+<link href="css/general.css" rel="stylesheet">
 <title>Beetroot</title>
 </head>
 	<body>
