making the css and some text and font edit,

--- a/index.html
+++ b/index.html
@@ -8,33 +8,40 @@
 			<h1>Beetroot <em>(Beta vulgaris)</em></h1>
 			<figure>
 				<img src="images/content.jpg" alt="beets">
+				
 				<figurecaption>A bundle of organic beets from a local farm food co-op program.</figurecaption>
 			</figure>
+			<hr>
 			<p>55 to 65 days are needed from germination to harvest of the root.</p>
-			<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+			<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p><hr>
 
-			<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-				<footer><cite>— Jim Halpert</cite></footer>
+			<blockquote>
+				<p>Fact, bears eat beets. Bears, beets, "Battlestar Galactica".<p>
+				<footer>
+					<cite>-Jim Halpert</cite>
+				</footer>
 			</blockquote>
-
-			<blockquote>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will 	clean them out of their beets. 
-				<footer><cite>— Chris Pratt</cite></footer>
+			<hr>
+			<blockquote>
+				<p>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</p> 
+				<footer>
+					<cite>-Chris Pratt</cite>
+				</footer>
 			</blockquote>
+			<hr>
 			<aside>	
 				<h2>Common varieties</h2>
-				<br>
 					<li>
 						<ol>
 							Albino
-							Bull’s Blood
+							Bull's Blood
 							Chioggia
 							Detroit Dark Red
 							Early Wonder
 						</ol>
 					</li>
-            	
+            	<hr>
 				<h2>Nutritional information</h2>
-				<br>
 					<dl>
 						<dt>Serving size:</dt> 
 							<dd> 
@@ -60,7 +67,7 @@
 					</dl>
 
 					<h2>Tags</h2>
-					<br>
+					<hr>
 						<li>
 							<ul>
 								Crimson
