fix the list of the common varieties

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<body>
 		<header>
 			<h1>Beetroot <em>(Beta vulgaris)</em></h1>
+			<hr>
 			<figure>
 				<img src="images/content.jpg" alt="beets">
 				
@@ -31,15 +32,13 @@
 			<hr>
 			<aside>	
 				<h2>Common varieties</h2>
-					<li>
-						<ol>
-							Albino
-							Bull's Blood
-							Chioggia
-							Detroit Dark Red
-							Early Wonder
-						</ol>
-					</li>
+					<ol>
+						<li>Albino</li>
+						<li>Bull's Blood</li>
+						<li>Chioggia</li>
+						<li>Detroit Dark Red</li>
+						<li>Early Wonder</li>
+					</ol>
             	<hr>
 				<h2>Nutritional information</h2>
 					<dl>
