fixing de data.

--- a/index.html
+++ b/index.html
@@ -41,28 +41,24 @@
 					</ol>
             	<hr>
 				<h2>Nutritional information</h2>
-					<dl>
-						<dt>Serving size:</dt> 
-							<dd> 
-								<data>100 g</data>
-							</dd>
-						<dt>Energy:</dt>
-							<dd>
-								 <data>180 kJ</data>
-							</dd>
-					
-						<dt>Carbohydrates:</dt>
-							<dd> 
-								<data>9.96 g</data>
-							</dd>
-						<dt>Fat:</dt>
-							<dd>
-								<data>0.18 g</data>
-							</dd>
-						<dt>Protein:</dt>
-							<dd>
-								<data>1.68 g</data>
-							</dd>
+				<p>Serving size: 100 g</p> 
+				<dl>	
+					<dt>Energy:</dt>
+						<dd>
+							<data>180 kJ</data>
+						</dd>
+					<dt>Carbohydrates:</dt>
+						<dd>
+							<data>9.96 g</data>
+	 					</dd>
+					<dt>Fat:</dt>
+						<dd>
+						<data>0.18 g</data>
+						</dd>
+					<dt>Protein:</dt>
+						<dd>
+						<data>1.68 g</data>
+						</dd>
 					</dl>
 
 					<h2>Tags</h2>
