fix the <ul> list

--- a/index.html
+++ b/index.html
@@ -61,17 +61,14 @@
 						</dd>
 					</dl>
 
-					<h2>Tags</h2>
 					<hr>
-						<li>
-							<ul>
-								Crimson
-								Awesome
-								Pickle-able
-								Vegetable!
-								Delicious
-							</ul>
-				        </li>
+						<lo>
+							<ul>Crimson</ul>
+							<ul>Awesome</ul>
+							<ul>Pickle-able</ul>
+							<ul>Vegetable!</ul>
+							<ul>Delicious</ul>
+				        </lo>
 			</aside>
 				<footer>
 					<cite>
