trying to fix the colour in the quotes

--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
 				
 				<figurecaption>A bundle of organic beets from a local farm food co-op program.</figurecaption>
 			</figure>
+		</header>
 			<hr>
 			<p>55 to 65 days are needed from germination to harvest of the root.</p>
-			<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p><hr>
-
-			<blockquote>
-				<p>Fact, bears eat beets. Bears, beets, "Battlestar Galactica".<p>
-				<footer>
-					<cite>-Jim Halpert</cite>
-				</footer>
-			</blockquote>
+			<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 			<hr>
-			<blockquote>
-				<p>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</p> 
-				<footer>
-					<cite>-Chris Pratt</cite>
-				</footer>
-			</blockquote>
+			<div>
+				<blockquote>
+					<p>Fact, bears eat beets. Bears, beets, "Battlestar Galactica".<p>
+					<footer>
+						<cite>-Jim Halpert</cite>
+					</footer>
+				</blockquote>
+				<hr>
+				<blockquote>
+					<p>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</p> 
+					<footer>
+						<cite>-Chris Pratt</cite>
+					</footer>
+				</blockquote>
+			</div>
 			<hr>
+			
 			<aside>	
 				<h2>Common varieties</h2>
 					<ol>
@@ -39,43 +43,46 @@
 						<li>Detroit Dark Red</li>
 						<li>Early Wonder</li>
 					</ol>
-            	<hr>
-				<h2>Nutritional information</h2>
-				<p>Serving size: 100 g</p> 
-				<dl>	
-					<dt>Energy:</dt>
-						<dd>
-							<data>180 kJ</data>
-						</dd>
-					<dt>Carbohydrates:</dt>
-						<dd>
-							<data>9.96 g</data>
-	 					</dd>
-					<dt>Fat:</dt>
-						<dd>
-						<data>0.18 g</data>
-						</dd>
-					<dt>Protein:</dt>
-						<dd>
-						<data>1.68 g</data>
-						</dd>
+            </aside>
+            <hr>
+            <div>
+            	<aside>
+					<h2>Nutritional information</h2>
+					<p>Serving size: 100 g</p> 
+					<dl>	
+						<dt>Energy:</dt>
+							<dd>
+								<data>180 kJ</data>
+							</dd>
+						<dt>Carbohydrates:</dt>
+							<dd>
+								<data>9.96 g</data>
+		 					</dd>
+						<dt>Fat:</dt>
+							<dd>
+							<data>0.18 g</data>
+							</dd>
+						<dt>Protein:</dt>
+							<dd>
+							<data>1.68 g</data>
+							</dd>
 					</dl>
+				</aside>
+			</div>
+			<hr>
+			<lo>
+				<ul>Crimson</ul>
+				<ul>Awesome</ul>
+				<ul>Pickle-able</ul>
+				<ul>Vegetable!</ul>
+				<ul>Delicious</ul>
+			</lo>
 
-					<hr>
-						<lo>
-							<ul>Crimson</ul>
-							<ul>Awesome</ul>
-							<ul>Pickle-able</ul>
-							<ul>Vegetable!</ul>
-							<ul>Delicious</ul>
-				        </lo>
-			</aside>
-				<footer>
-					<cite>
-						Source: Wikipedia; Last modified: <time>Aug 30, 2014</time>
-					</cite>
-				</footer>
-		</header>
+			<footer>
+				<cite>
+					Source: Wikipedia; Last modified: <time>Aug 30, 2014</time>
+				</cite>
+			</footer>
 	</body>
 </html>
 
